[package]
name = "client-render-base"
version = "0.1.0"
edition = "2021"

[dependencies]
base = { path = "../../lib/base" }
base-io = { path = "../../lib/base-io" }
math = { path = "../../lib/math" }
client-containers = { path = "../client-containers" }
config = { path = "../../lib/config" }
graphics-backend-traits = { path = "../../lib/graphics-backend-traits" }
graphics = { path = "../../lib/graphics" }
graphics-base-traits = { path = "../../lib/graphics-base-traits" }
graphics-types = { path = "../../lib/graphics-types" }
shared-base = { path = "../shared-base" }
game-config = { path = "../game-config" }
hiarc = { path = "../../lib/hiarc" }
hiarc-macro = { path = "../../lib/hiarc-macro" }
pool = { path = "../../lib/pool" }
image = { path = "../../lib/image" }
serde = "1.0.193"
rayon = "1.8.0"
num-derive = "0.4.1"
num-traits = "0.2.17"
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
anyhow = "1.0.75"
