[package]
name = "client-render-base"
version = "0.1.0"
edition = "2021"

[dependencies]
math = { path = "../../lib/math" }
client-containers-new = { path = "../client-containers-new" }
config = { path = "../../lib/config" }
graphics-backend-traits = { path = "../../lib/graphics-backend-traits" }
graphics = { path = "../../lib/graphics" }
graphics-types = { path = "../../lib/graphics-types" }
shared-base = { path = "../shared-base" }
map = { path = "../map" }
game-config = { path = "../game-config" }
game-interface = { path = "../game-interface" }
hiarc = { path = "../../lib/hiarc", features = ["derive"] }
pool = { path = "../../lib/pool" }
sound = { path = "../../lib/sound" }
serde = "1.0.198"
rayon = "1.10.0"
num-derive = "0.4.2"
num-traits = "0.2.18"
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
anyhow = { version = "1.0.82", features = ["backtrace"] }
time = { version = "0.3.36", features = ["serde"] }
fixed = "1.27.0"
