[package]
name = "client-types"
version = "0.1.0"
edition = "2021"

[dependencies]
pool = { path = "../../lib/pool" }
config = { path = "../../lib/config" }
shared-base = { path = "../shared-base" }
game-config = { path = "../game-config" }
game-interface = { path = "../game-interface" }
command-parser = { path = "../command-parser" }

serde = { version = "1.0.203", features = ["derive"] }
anyhow = { version = "1.0.86", features = ["backtrace"] }
serde_with = "3.8.2"
