[package]
name = "client-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
client-types = { path = "../client-types" }
client-containers = { path = "../client-containers" }
client-render-base = { path = "../client-render-base" }
command-parser = { path = "../command-parser" }
master-server-types = { path = "../master-server-types" }
shared-base = { path = "../shared-base" }
game-interface = { path = "../game-interface" }
game-config = { path = "../game-config" }
base = { path = "../../lib/base" }
base-io = { path = "../../lib/base-io" }
config = { path = "../../lib/config" }
ui-base = { path = "../../lib/ui-base" }
ui-traits = { path = "../../lib/ui-traits" }
math = { path = "../../lib/math" }
sound = { path = "../../lib/sound" }
graphics = { path = "../../lib/graphics" }
graphics-types = { path = "../../lib/graphics-types" }
hiarc = { path = "../../lib/hiarc", features = ["derive"] }

egui = { git = "https://github.com/emilk/egui", rev = "9a1e358a144b5d2af9d03a80257c34883f57cf0b", features = ["serde"] }
egui_extras = { git = "https://github.com/emilk/egui", rev = "9a1e358a144b5d2af9d03a80257c34883f57cf0b" }
fuzzy-matcher = "0.3.7"
serde_json = "1.0.125"
serde = { version = "1.0.208", features = ["derive"] }
hashlink = { git = "https://github.com/Jupeyy/hashlink/", branch = "pr-skipped-it", features = ["serde", "serde_impl"] }
rayon = "1.10.0"
log = "0.4.22"
anyhow = { version = "1.0.86", features = ["backtrace"] }
async-trait = "0.1.81"
email_address = { version = "0.2.9", features = ["serde"] }
