[package]
name = "client-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
demo = { path = "../demo" }
client-types = { path = "../client-types" }
client-containers = { path = "../client-containers" }
client-render-base = { path = "../client-render-base" }
command-parser = { path = "../command-parser" }
master-server-types = { path = "../master-server-types" }
shared-base = { path = "../shared-base" }
game-interface = { path = "../game-interface" }
game-config = { path = "../game-config" }
base = { path = "../../lib/base" }
base-io = { path = "../../lib/base-io" }
base-io-traits = { path = "../../lib/base-io-traits" }
config = { path = "../../lib/config" }
ui-base = { path = "../../lib/ui-base" }
ui-traits = { path = "../../lib/ui-traits" }
math = { path = "../../lib/math" }
image = { path = "../../lib/image" }
pool = { path = "../../lib/pool" }
sound = { path = "../../lib/sound" }
graphics = { path = "../../lib/graphics" }
graphics-types = { path = "../../lib/graphics-types" }
hiarc = { path = "../../lib/hiarc", features = ["derive"] }

egui = { version = "0.29.1", features = ["serde"] }
egui_extras = { version = "0.29.1" }
fuzzy-matcher = "0.3.7"
serde_json = "1.0.125"
serde = { version = "1.0.208", features = ["derive"] }
hashlink = { git = "https://github.com/Jupeyy/hashlink/", branch = "pr-skipped-it", features = ["serde", "serde_impl"] }
rayon = "1.10.0"
log = "0.4.22"
egui_commonmark = "0.18.0"
anyhow = { version = "1.0.86", features = ["backtrace"] }
async-trait = "0.1.81"
email_address = { version = "0.2.9", features = ["serde"] }
url = { version = "2.5.2", features = ["serde"] }
gcd = "2.3.0"
serde_with = "3.9.0"
