[package]
name = "command-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
hiarc = { path = "../../lib/hiarc", features = ["derive"] }

serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.119"
anyhow = { version = "1.0.86", features = ["backtrace"] }
logos = { version = "0.14.0" }
snailquote = "0.3.1"
regex = "1.10.5"
thiserror = "1.0.61"
