[package]
name = "demo"
version = "0.1.0"
edition = "2021"

[dependencies]
base = { path = "../../lib/base" }
math = { path = "../../lib/math" }
config = { path = "../../lib/config" }
graphics = { path = "../../lib/graphics" }
graphics-types = { path = "../../lib/graphics-types" }
pool = { path = "../../lib/pool" }
hiarc = { path = "../../lib/hiarc" }
ui-base = { path = "../../lib/ui-base" }
sound = { path = "../../lib/sound" }
bin-patch = { path = "../../lib/bin-patch" }

shared-base = { path = "../shared-base" }
game-interface = { path = "../game-interface" }
game-config = { path = "../game-config" }

serde = { version = "1.0.208", features = ["derive"] }
bincode = { features = ["serde"], version = "2.0.0-rc.3" }
anyhow = { version = "1.0.86", features = ["backtrace"] }
rayon = "1.10.0"
zstd = { version = "0.13", features = ["experimental"] }
itertools = "0.13.0"
egui = { version = "0.29.1", features = ["serde"] }

# feature related
base-io = { path = "../../lib/base-io", optional = true }

tempfile = { version = "3.12.0", optional = true }
chrono = { version = "0.4.38", features = ["serde"], optional = true }

[features]
recorder = ["chrono", "tempfile", "base-io"]
