[package]
name = "editor"
version = "0.1.0"
edition = "2021"

[dependencies]
base = { path = "../../lib/base" }
math = { path = "../../lib/math" }
config = { path = "../../lib/config" }
network = { path = "../../lib/network" }
ui-base = { path = "../../lib/ui-base" }
ui-traits = { path = "../../lib/ui-traits" }
base-io = { path = "../../lib/base-io" }
base-io-traits = { path = "../../lib/base-io-traits" }
image = { path = "../../lib/image" }
graphics = { path = "../../lib/graphics" }
graphics-types = { path = "../../lib/graphics-types" }
hiarc = { path = "../../lib/hiarc", features = ["derive"] }
pool = { path = "../../lib/pool" }
sound = { path = "../../lib/sound" }

egui-timeline = { path = "../egui-timeline" }
map = { path = "../map" }
client-render = { path = "../client-render" }
client-containers = { path = "../client-containers" }
client-render-base = { path = "../client-render-base" }
game-config = { path = "../game-config" }
game-interface = { path = "../game-interface" }
shared-base = { path = "../shared-base" }

map-convert-lib = { path = "../map-convert-lib", optional = true }

egui = { git = "https://github.com/emilk/egui", rev = "9a1e358a144b5d2af9d03a80257c34883f57cf0b", features = ["serde"] }
egui_extras = { git = "https://github.com/emilk/egui", rev = "9a1e358a144b5d2af9d03a80257c34883f57cf0b" }
egui-file-dialog = "0.6.0"
egui_commonmark = "0.17.0"
async-trait = "0.1.81"
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
serde = { version = "1.0.208", features = ["derive"] }
tokio = { version = "1.39.3", features = ["rt-multi-thread", "sync", "fs", "time", "macros"] }
hashlink = { git = "https://github.com/Jupeyy/hashlink/", branch = "pr-skipped-it", features = ["serde", "serde_impl"] }
anyhow = { version = "1.0.86", features = ["backtrace"] }
rayon = "1.10.0"
rand = { version = "0.8.5", features = ["std_rng"], default-features = false }
time = { version = "0.3.36", features = ["serde"] }
serde_json = "1.0.125"
rcgen = "0.13.1"
ed25519-dalek = { version = "2.1.1", features = ["serde"] }
x509-cert = { version = "0.2.5" }

[features]
legacy = ["map-convert-lib"]

default = ["legacy"]
