[package]
name = "game-config"
version = "0.1.0"
edition = "2021"

[dependencies]
config = { path = "../../lib/config" }
config-macro = { path = "../../lib/config-macro" }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.119"
anyhow = { version = "1.0.86", features = ["backtrace"] }
