[package]
name = "game-config"
version = "0.1.0"
edition = "2021"

[dependencies]
math = { path = "../../lib/math" }
config = { path = "../../lib/config" }

game-interface = { path = "../game-interface" }

serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.119"
anyhow = { version = "1.0.86", features = ["backtrace"] }
