[package]
name = "game-interface"
version = "0.1.0"
edition = "2021"

[dependencies]
base = { path = "../../lib/base" }
math = { path = "../../lib/math" }
pool = { path = "../../lib/pool", features = ["enable_hiarc"] }
hiarc = { path = "../../lib/hiarc", features = ["derive", "enable_hashlink"] }
# non-local libs
serde = { version = "1.0.198", features = ["derive"] }
num-derive = "0.4.2"
num-traits = "0.2.18"
thiserror = "1.0.59"
hashlink = { git = "https://github.com/Jupeyy/hashlink/", branch = "pr-skipped-it", features = ["serde", "serde_impl"] }
strum_macros = "0.26.2"
bitflags = { version = "2.5.0", features = ["serde"] }
