[package]
name = "game-interface"
version = "0.1.0"
edition = "2021"

[dependencies]
base = { path = "../../lib/base" }
math = { path = "../../lib/math" }
pool = { path = "../../lib/pool", features = ["enable_hiarc"] }
hiarc = { path = "../../lib/hiarc", features = ["derive", "enable_hashlink", "enable_ascii"] }
# non-local libs
serde = { version = "1.0.203", features = ["derive"] }
num-derive = "0.4.2"
num-traits = "0.2.19"
thiserror = "1.0.61"
hashlink = { git = "https://github.com/Jupeyy/hashlink/", branch = "pr-skipped-it", features = ["serde", "serde_impl"] }
strum_macros = "0.26.4"
bitflags = { version = "2.6.0", features = ["serde"] }
ascii = { version = "1.1.0", features = ["serde"] }
either = { version = "1.13.0", features = ["serde"] }
