[package]
name = "game-interface"
version = "0.1.0"
edition = "2021"

[dependencies]
accounts-types = { path = "../../accounts/lib/accounts-types" }

command-parser = { path = "../command-parser" }

base = { path = "../../lib/base" }
base-io = { path = "../../lib/base-io" }
math = { path = "../../lib/math" }
pool = { path = "../../lib/pool", features = ["enable_hiarc"] }
hiarc = { path = "../../lib/hiarc", features = ["derive", "enable_hashlink", "enable_ascii"] }
game-database = { path = "../../lib/game-database" }

# non-local libs
serde = { version = "1.0.208", features = ["derive"] }
num-derive = "0.4.2"
num-traits = "0.2.19"
thiserror = "1.0.63"
hashlink = { git = "https://github.com/Jupeyy/hashlink/", branch = "pr-skipped-it", features = ["serde", "serde_impl"] }
strum = { version = "0.26.3", features = ["derive"] }
bitflags = { version = "2.6.0", features = ["serde"] }
ascii = { version = "1.1.0", features = ["serde"] }
either = { version = "1.13.0", features = ["serde"] }

[package.metadata.cargo-machete]
ignored = ["num-traits"]
