[package]
name = "map-convert-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base = { path = "../../lib/base" }
base-io = { path = "../../lib/base-io" }
image = { path = "../../lib/image" }
shared-base = { path = "../../game/shared-base" }
map = { path = "../../game/map" }
rayon = "1.10.0"
anyhow = { version = "1.0.86", features = ["backtrace"] }
oxipng = { version = "9.1", features = ["parallel"], default-features = false }
opus = "0.3.0"
vorbis_rs = { version = "0.5.4", default-features = false }
