[package]
name = "map"
version = "0.1.0"
edition = "2021"

[dependencies]
math = { path = "../../lib/math" }
base = { path = "../../lib/base" }
hiarc = { path = "../../lib/hiarc", features = ["enable_time", "enable_hashlink"] }
rayon = "1.10.0"
bincode = { features = ["serde"], version = "2.0.0-rc.3" }
brotli = "6.0.0"
anyhow = { version = "1.0.86", features = ["backtrace"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
time = { version = "0.3.36", features = ["serde"] }
is_sorted = "0.1.1"
hashlink = { git = "https://github.com/Jupeyy/hashlink/", branch = "pr-skipped-it", features = ["serde", "serde_impl"] }
bitflags = { version = "2.6.0", features = ["serde"] }

[dev-dependencies]
base-fs = { path = "../../lib/base-fs" }
base-io = { path = "../../lib/base-io" }
difference = "2.0"
lz4_flex = { version = "0.11" }
zstd = "0.13"
#rust-lzma = "0.6.0"
flate2 = "1.0.31"
