[package]
name = "master-server-types"
version = "0.1.0"
edition = "2021"
authors = ["heinrich5991 <heinrich5991@gmail.com>"]
publish = false
license = "Zlib"

[dependencies]
arrayvec = { version = "0.5.2", features = ["serde"] }
csv = "1.3.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = { version = "1.0.108", features = [
  "float_roundtrip",
  "preserve_order",
  "raw_value",
] }
url = { version = "2.5.0", features = ["serde"] }
ipnet = { version = "2.9.0", features = ["serde"] }
