[package]
name = "server-database"
version = "0.1.0"
edition = "2021"

[dependencies]
base-log = { path = "../../lib/base-log" }
sql = { path = "../../lib/sql" }
sqlx = { version = "0.7.4", features = ["runtime-tokio", "sqlx-mysql", "mysql"] }
anyhow = { version = "1.0.82", features = ["backtrace"] }
