[package]
name = "shared-base"
version = "0.1.0"
edition = "2021"

[dependencies]
math = { path = "../../lib/math" }
base = { path = "../../lib/base" }
image = { path = "../../lib/image" }
graphics-types = { path = "../../lib/graphics-types" }
pool = { path = "../../lib/pool" }
hiarc = { path = "../../lib/hiarc", features = ["enable_time"] }
map = { path = "../map" }
game-interface = { path = "../game-interface" }
rayon = "1.10.0"
arrayvec = { version = "0.7.4", features = ["serde"] }
num-derive = "0.4.2"
num-traits = "0.2.19"
flate2 = "1.0.30"
anyhow = { version = "1.0.86", features = ["backtrace"] }
hashlink = { git = "https://github.com/Jupeyy/hashlink/", branch = "pr-skipped-it", features = ["serde", "serde_impl"] }
serde = "1.0.203"
indexmap = "2.2.6"
bitflags = { version = "2.6.0", features = ["serde"] }
serde_json = "1.0.119"
time = { version = "0.3.36", features = ["serde"] }

[dev-dependencies]
base-fs = { path = "../../lib/base-fs" }
base-io = { path = "../../lib/base-io" }
difference = "2.0"
