[package]
name = "shared-base"
version = "0.1.0"
edition = "2021"

[dependencies]
math = { path = "../../lib/math" }
base = { path = "../../lib/base" }
image = { path = "../../lib/image" }
graphics-types = { path = "../../lib/graphics-types" }
pool = { path = "../../lib/pool" }
hiarc = { path = "../../lib/hiarc", features = ["enable_time"] }

map = { path = "../map" }
game-interface = { path = "../game-interface" }

rayon = "1.10.0"
num-derive = "0.4.2"
num-traits = "0.2.19"
flate2 = "1.0.31"
anyhow = { version = "1.0.86", features = ["backtrace"] }
hashlink = { git = "https://github.com/Jupeyy/hashlink/", branch = "pr-skipped-it", features = ["serde", "serde_impl"] }
serde = { version = "1.0.208", features = ["derive"] }
indexmap = "2.4.0"
serde_json = "1.0.125"
time = { version = "0.3.36", features = ["serde"] }
serde_with = "3.9.0"

[package.metadata.cargo-machete]
ignored = ["num-traits"]

[dev-dependencies]
base-fs = { path = "../../lib/base-fs" }
base-io = { path = "../../lib/base-io" }
difference = "2.0"
rustc-hash = "2.0.0"
